--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-horizontal-scrolling-menu": "^3.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1"
   },
