--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^3.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "cy": "cypress run",
